--- a/web/templates/problems/solutions.html
+++ b/web/templates/problems/solutions.html
@@ -41,9 +41,9 @@
                   <div class="col-xs-12 col-sm-6 col-sm-height">
                     <div class="tomo-solution-user">
                       <div class="tomo-solution-valid">
-                        {% if part.attempt.valid %}<i class="color5 fa fa-circle fa-lg"></i>
-                        {% elif part.attempt %}<i class="color3 fa fa-circle fa-lg"></i>
-                        {% else %}<i class="color1 fa fa-circle fa-lg"></i>
+                        {% if part.attempt.valid %}<i class="color5 fa fa-check-circle fa-lg"></i>
+                        {% elif part.attempt %}<i class="color3 fa fa-question-circle fa-lg"></i>
+                        {% else %}<i class="color1 fa fa-times-circle fa-lg"></i>
                         {% endif %}
                       </div>
                       {# Translators: Title of user solutions column. #}
