--- a/web/templates/courses/problem_set_progress.html
+++ b/web/templates/courses/problem_set_progress.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 
-{% block navigation-left %} 
+{% block navigation-left %}
   <a class="navbar-brand topnav" href="{% url 'course_detail' problem_set.course.pk %}">{{ problem_set.course.title }}</a>
   <a class="navbar-brand topnav" href="{% url 'problem_set_detail' problem_set.pk %}">{{ problem_set.title }}</a>
   <a class="navbar-brand topnav" href="#">
@@ -40,9 +40,9 @@
                 <td width='60%'>
                   {% for attempt in observed_user.these_attempts %}
                   <a href="{% url 'problem_solution' problem.pk observed_user.pk %}">
-                    {% if attempt.valid %}<i class="color5 fa fa-circle fa-lg"></i>
-                    {% elif attempt %}<i class="color3 fa fa-circle fa-lg"></i>
-                    {% else %}<i class="color1 fa fa-circle fa-lg"></i>
+                    {% if attempt.valid %}<i class="color5 fa fa-check-circle fa-lg"></i>
+                    {% elif attempt %}<i class="color3 fa fa-question-circle fa-lg"></i>
+                    {% else %}<i class="color1 fa fa-times-circle fa-lg"></i>
                     {% endif %}
                   </a>
                   {% endfor %}
