--- a/web/utils/static/css/tomo.css
+++ b/web/utils/static/css/tomo.css
@@ -28,6 +28,7 @@ body, h1, h2, h3, h4, h5, h6 {
 
 
 a { color: #23527c; }
+a.solution-circle { text-decoration: none; }
 .dropdown { position: relative; }
 .content-section-y { background-color: rgba(215, 160, 44, .8); }
 
