--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -63,6 +63,7 @@
           </form>
           {% endfor %}
         </ul>
+        <a href="{% url 'course_groups' course.pk %}"> Pregled skupin </a>
         <hr>
         <ul class="tomo-students">
           {% for student in students %}
