--- a/web/templates/courses/coursegroup_confirm_delete.html
+++ b/web/templates/courses/coursegroup_confirm_delete.html
@@ -5,11 +5,11 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     {# Translators: Title of course group delete confirmation page. Brisanje skupine#}
-    <h4 class="modal-title">{% trans "Delete course_group" %} {{ group.title }}</h4>
+    <h4 class="modal-title">{% trans "Delete course_group" %}</h4>
 </div>
 <div class="modal-body">
     {# Translators: Translators: Text of course group delete confirmation page. Ste prepričani, da želite izbrisati to skupino?#}
-    {% trans "Are you sure you want to delete this course group" %} <em>{{ group.title }}</em>?	
+    {% trans "Are you sure you want to delete this course group" %}?	
                         
 </div>
 <div class="modal-footer">
