--- a/web/templates/courses/coursegroup_confirm_delete.html
+++ b/web/templates/courses/coursegroup_confirm_delete.html
@@ -4,13 +4,12 @@
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    {# Translators: Title of course group delete confirmation page. Brisanje skupine#}
+    {# Translators: Title of course group delete confirmation page. Brisanje skupine #}
     <h4 class="modal-title">{% trans "Delete course_group" %}</h4>
 </div>
 <div class="modal-body">
-    {# Translators: Translators: Text of course group delete confirmation page. Ste prepričani, da želite izbrisati to skupino?#}
-    {% trans "Are you sure you want to delete this course group" %}?	
-                        
+    {# Translators: Translators: Text of course group delete confirmation page. Ste prepričani, da želite izbrisati to skupino? #}
+    {% trans "Are you sure you want to delete this course group?" %}
 </div>
 <div class="modal-footer">
     <button  onclick="delete_course_group()" type="submit" class="btn btn-primary btn-large">
