Move Institution to a foreign key.
Co-authored-by: Karel Križnar <karel.kriznar@student.fmf.uni-lj.si>

--- a/web/templates/homepage.html
+++ b/web/templates/homepage.html
@@ -29,9 +29,9 @@
 <div class="content-section-y tomo-other">
   <div class="container tomo-other">
     <h2>Ostale ustanove, ki ponujajo predmete</h2>
-      {% regroup not_user_courses by institution as institution_list %}
-      {% for institution in institution_list %}
-      <a class="hide-courses" data-toggle="collapse" href="#inst-{{ forloop.counter}}" aria-expanded="false" aria-controls="inst-{{ forloop.counter}}">{{ institution.grouper }}</a>
+    {% regroup not_user_courses by institution.name as institution_list %}
+    {% for institution in institution_list %}
+    <a class="hide-courses" data-toggle="collapse" href="#inst-{{ forloop.counter}}" aria-expanded="false" aria-controls="inst-{{ forloop.counter}}">{{ institution.grouper }}</a>
     <div class="row collapse" id="inst-{{ forloop.counter}}">
       {% for course in institution.list %}
       <div class="col-md-4">
@@ -61,9 +61,9 @@
       </div>
       {% endfor %}
     </div>
-      {% empty %}
-        <p style="margin-left:30px;">Ni ostalih ustanov.</p>
-      {% endfor %}
+    {% empty %}
+      <p style="margin-left:30px;">Ni ostalih ustanov.</p>
+    {% endfor %}
   </div>
 </div>
 {% endblock content %}
