--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -70,7 +70,7 @@
         </ul>
         <hr>
         <a href="{% url 'course_groups' course.pk %}"> Pregled skupin </a> <br>
-        <a href="{% url 'statistics' course.pk %}"> Statistika </a>
+        <a href="{% url 'statistics_landing_page' course.pk %}"> Statistika </a>
         <hr>
         <ul class="tomo-students">
           {% for student in students %}
