--- a/web/templates/problems/solutions.html
+++ b/web/templates/problems/solutions.html
@@ -37,63 +37,52 @@
               {# Translators: in solution comparison table #}
               <p>{{ forloop.counter }}. {% trans 'part' %}</p>
               <div class="row">
-                <div class="row-height">
-                  <div class="col-xs-12 col-sm-6 col-sm-height">
-                    <div class="tomo-solution-user">
-                      <div class="tomo-solution-valid">
-                        {% if part.attempt.valid %}<i class="color5 fa fa-check-circle fa-lg"></i>
-                        {% elif part.attempt %}<i class="color3 fa fa-question-circle fa-lg"></i>
-                        {% else %}<i class="color1 fa fa-times-circle fa-lg"></i>
-                        {% endif %}
-                      </div>
-                      {# Translators: Title of user solutions column. #}
-                      {% trans 'Your solution' %}
+                <div class="col-xs-12 col-sm-6">
+                  <div class="tomo-solution-user">
+                    <div class="tomo-solution-valid">
+                      {% if part.attempt.valid %}<i class="color5 fa fa-check-circle fa-lg"></i>
+                      {% elif part.attempt %}<i class="color3 fa fa-question-circle fa-lg"></i>
+                      {% else %}<i class="color1 fa fa-times-circle fa-lg"></i>
+                      {% endif %}
                     </div>
-                    <div class="inside inside-full-height">
-                      <div class="content">
-                        <div class="tomo-solution-code-user">
-                          {% if part.attempt %}
-                          {% trans 'Last submission time:' %} {{ part.attempt.submission_date }}
-                          <div class="tomo-pre">{{ part.attempt.solution }}</div>
-                          {% else %}
-                          {# Translators: in solution comparison table #}
-                          <div class="tomo-message">{% trans 'You did not attempt to solve this part.' %}</div>
-                          {% endif %}
-                        </div>
-                      </div>
-                    </div>
+                    {# Translators: Title of user solutions column. #}
+                    {% trans 'Your solution' %}
                   </div>
-
-                <div class="col-xs-12 col-sm-6 col-sm-height">
-                  <div class="tomo-solution-official">
-                    {# Translators: Title of official solutions column. #}
-                    {% trans 'Official solution' %}
-                  </div>
-                  <div class="inside inside-full-height">
-                    <div class="content">
-                      <div class="tomo-solution-code-official">
-                        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE or is_teacher %}
-                        <div class="tomo-pre">{{ part.solution }}</div>
-
-                        {% elif problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN or problem_set.solution_visibility == problem_set.PROBLEM_HIDDEN %}
-                        {# Translators: in solution comparison table #}
-                        <div class="tomo-message">{% trans 'Official solutions are hidden.' %}</div>
-
-                        {% elif problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}
-                        {% if part.attempt.valid %}
-                        <div class="tomo-pre">{{ part.solution }}</div>
-                        {% else %}
-                        {# Translators: in solution comparison table #}
-                        <div class="tomo-message">{% trans 'Official solution will be visible once you submit a valid solution.' %}</div>
-                        {% endif %}
-                        {% endif %}
-
-                      </div>
-                    </div>
+                  <div class="tomo-solution-code-user">
+                    {% if part.attempt %}
+                      {% trans 'Last submission time:' %} {{ part.attempt.submission_date }}
+                      <div class="tomo-pre">{{ part.attempt.solution }}</div>
+                    {% else %}
+                      {# Translators: in solution comparison table #}
+                      <div class="tomo-message">{% trans 'You did not attempt to solve this part.' %}</div>
+                    {% endif %}
                   </div>
                 </div>
-              </div>
-              </div>
+
+                <div class="col-xs-12 col-sm-6">
+                  <div class="tomo-solution-official">
+                    {# Translators: Title of official solutions column. #}
+                    {% trans 'Official solution' %}<br>
+                  </div>
+                  <div class="tomo-solution-code-official">
+                    {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE or is_teacher %}
+                    <div class="tomo-pre">{{ part.solution }}</div>
+
+                    {% elif problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN or problem_set.solution_visibility == problem_set.PROBLEM_HIDDEN %}
+                    {# Translators: in solution comparison table #}
+                    <div class="tomo-message">{% trans 'Official solutions are hidden.' %}</div>
+
+                    {% elif problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}
+                    {% if part.attempt.valid %}
+                    <div class="tomo-pre">{{ part.solution }}</div>
+                    {% else %}
+                    {# Translators: in solution comparison table #}
+                    <div class="tomo-message">{% trans 'Official solution will be visible once you submit a valid solution.' %}</div>
+                    {% endif %}
+                    {% endif %}
+                  </div>
+                </div>
+              </div><!-- row -->
             </li>
             {% endfor %}
           </ul>
