--- a/web/utils/static/css/tomo.css
+++ b/web/utils/static/css/tomo.css
@@ -188,12 +188,16 @@ margin-left: 30px; margin-bottom: 5px;}
   float: right;
 }
 .tomo-solution-official {
- /*float: right;*/
- width: 200px;
- color:#878F28;
+  width: 200px;
+  color:#878F28;
+  margin-bottom: 20px;
 }
-/*.tomo-solution-code-user { margin-left: 30px; }*/
-/*.tomo-solution-code-official { margin-right: 30px; }*/
+@media (min-width: 768px) {
+  .tomo-solution-official {
+    margin-bottom: 0px;
+    margin-top: 20px;
+  }
+}
 
 footer img { max-width: 100%; max-height: 6em; margin-bottom: 20px; }
 
@@ -212,57 +216,6 @@ footer img { max-width: 100%; max-height: 6em; margin-bottom: 20px; }
 #sidebar .subtasks { overflow: auto; }
 #sidebar .subtasks a { font-size: 1em; display: block; width: 2em; text-align: left; margin: 0px; float: left; }
 #sidebar .subtasks .chart { float: left; margin: .05em 0 0 5px; }
-
-
-/* Same height columns */
-.inside {}
-.inside-full-height {
-  /* if you want to give content full height give him height: 100%;
-  // with content full height you can't apply margins to the content
-  // content full height does not work in ie http://stackoverflow.com/questions/27384433/ie-display-table-cell-child-ignores-height-100 */
-  height: 100%; margin: 0;
-}
-.content { padding: 0; height: 100%; }
-.content .tomo-solution-code-official { padding: 0; height: 100%; }
-.content .tomo-solution-code-user { padding: 0; height: 100%; }
-.content .tomo-solution-code-official .tomo-pre { margin: 0; height: 100%; }
-
-/* columns of same height styles */
-.row-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
-.col-height { display: table-cell; float: none; height: 100%; }
-.col-top { vertical-align: top; }
-.col-middle { vertical-align: middle; }
-.col-bottom { vertical-align: bottom; }
-
-@media (min-width: 480px) {
-  .row-xs-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
-  .col-xs-height { display: table-cell; float: none; height: 100%; }
-  .col-xs-top { vertical-align: top; }
-  .col-xs-middle { vertical-align: middle; }
-  .col-xs-bottom { vertical-align: bottom; }
-}
-@media (min-width: 768px) {
-  .row-sm-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
-  .col-sm-height { display: table-cell; float: none; height: 100%; }
-  .col-sm-top { vertical-align: top; }
-  .col-sm-middle { vertical-align: middle; }
-  .col-sm-bottom { vertical-align: bottom; }
-}
-@media (min-width: 992px) {
-  .row-md-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
-  .col-md-height { display: table-cell; float: none; height: 100%; }
-  .col-md-top { vertical-align: top; }
-  .col-md-middle { vertical-align: middle; }
-  .col-md-bottom { vertical-align: bottom; }
-}
-@media (min-width: 1200px) {
-  .row-lg-height { display: table; table-layout: fixed; height: 100%; width: 100%; }
-  .col-lg-height { display: table-cell; float: none; height: 100%; }
-  .col-lg-top { vertical-align: top; }
-  .col-lg-middle { vertical-align: middle; }
-  .col-lg-bottom { vertical-align: bottom; }
-}
-
 
 /* plain text */
 .pln {
